RESOLVED FIXED177458
Followup (r222427): SynchronizedFixedQueue should not have a public constructor
https://bugs.webkit.org/show_bug.cgi?id=177458
Summary Followup (r222427): SynchronizedFixedQueue should not have a public constructor
Said Abou-Hallawa
Reported 2017-09-25 13:05:31 PDT
Since SynchronizedFixedQueue is now derived from ThreadSafeRefCounted<SynchronizedFixedQueue>, the standard way to have an instance of it is to call SynchronizedFixedQueue::create() which returns a Ref<SynchronizedFixedQueue>. Now it does not make since to still have the constructor public.
Attachments
Patch (9.17 KB, patch)
2017-09-25 13:12 PDT, Said Abou-Hallawa
no flags
Patch (8.76 KB, patch)
2017-09-26 15:13 PDT, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2017-09-25 13:12:26 PDT
Tim Horton
Comment 2 2017-09-26 14:43:43 PDT
Comment on attachment 321730 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=321730&action=review > Source/WTF/ChangeLog:10 > + which returns a Ref<SynchronizedFixedQueue>. Now it does not make since to still s/since/sense/
Said Abou-Hallawa
Comment 3 2017-09-26 15:13:53 PDT
WebKit Commit Bot
Comment 4 2017-09-26 15:40:54 PDT
Comment on attachment 321878 [details] Patch Clearing flags on attachment: 321878 Committed r222530: <http://trac.webkit.org/changeset/222530>
WebKit Commit Bot
Comment 5 2017-09-26 15:40:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-09-27 12:17:50 PDT
Note You need to log in before you can comment on or make changes to this bug.