Tools/TestWebKitAPI/Tests/WTF/SynchronizedFixedQueue.cpp
@@ -56,6 +56,8 @@ template <size_t BufferSize>
 class ToUpperConverter {
 public:
     ToUpperConverter()
+        : m_lowerQueue(SynchronizedFixedQueue<CString, BufferSize>::create())
+        , m_upperQueue(SynchronizedFixedQueue<CString, BufferSize>::create())
     {
     }
 
@@ -80,8 +82,8 @@ public:
 
         produceQueue()->dispatch([this] {
             CString lower;
-            while (m_lowerQueue.dequeue(lower)) {
-                m_upperQueue.enqueue(toUpper(lower));
+            while (m_lowerQueue->dequeue(lower)) {
+                m_upperQueue->enqueue(toUpper(lower));
                 EXPECT_TRUE(lower == textItem(m_produceCount++));
 #if PLATFORM(WIN)
                 auto sleepAmount = std::chrono::milliseconds(20);
@@ -101,7 +103,7 @@ public:
 
         consumeQueue()->dispatch([this] {
             CString upper;
-            while (m_upperQueue.dequeue(upper)) {
+            while (m_upperQueue->dequeue(upper)) {
                 EXPECT_TRUE(upper == toUpper(textItem(m_consumeCount++)));
                 std::this_thread::sleep_for(std::chrono::milliseconds(50));
             }
@@ -120,7 +122,7 @@ public:
         if (!isProducing())
             return;
 
-        m_lowerQueue.close();
+        m_lowerQueue->close();
         m_produceCloseSemaphore.wait(WallTime::infinity());
         m_produceQueue = nullptr;
     }
@@ -130,7 +132,7 @@ public:
         if (!isConsuming())
             return;
 
-        m_upperQueue.close();
+        m_upperQueue->close();
         m_consumeCloseSemaphore.wait(WallTime::infinity());
         m_consumeQueue = nullptr;
     }
@@ -143,7 +145,7 @@ public:
 
     void enqueueLower(const CString& lower)
     {
-        m_lowerQueue.enqueue(lower);
+        m_lowerQueue->enqueue(lower);
     }
 
     bool isProducing() { return m_produceQueue; }
@@ -153,8 +155,8 @@ public:
     size_t consumeCount() const { return m_consumeCount; }
 
 private:
-    SynchronizedFixedQueue<CString, BufferSize> m_lowerQueue;
-    SynchronizedFixedQueue<CString, BufferSize> m_upperQueue;
+    Ref<SynchronizedFixedQueue<CString, BufferSize>> m_lowerQueue;
+    Ref<SynchronizedFixedQueue<CString, BufferSize>> m_upperQueue;
     RefPtr<WorkQueue> m_produceQueue;
     RefPtr<WorkQueue> m_consumeQueue;
     BinarySemaphore m_produceCloseSemaphore;
